# weaviate-crewai-project

./: .gitignore  README.md  call_crew_api.py  requirements.txt  weaviate_calibrate_companies.py  weaviate_ecommerce_example.py
server/: company_data.py  main.py  requirements.txt  weaviate_calibrate_companies.py
server/crew/: README.md  pyproject.toml
server/crew/src/company_description_retrieval_automation/: main.py
server/crew/src/db/: chroma.sqlite3
server/crewai/src/company_description_retrieval_automation/: crew.py  main.py
server/crewai/src/company_description_retrieval_automation/config/: agents.yaml  tasks.yaml
ui/: package.json  pnpm-lock.yaml
ui/src/app/: layout.tsx  page.tsx
ui/src/app/company/: page.tsx
ui/src/components/hooks/: use-auto-scroll.tsx
