[project]
name = "company_description_retrieval_automation"
version = "0.1.0"
description = "company_description_retrieval_automation using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.119.0,<1.0.0"
]

[project.scripts]
company_description_retrieval_automation = "company_description_retrieval_automation.main:run"
run_crew = "company_description_retrieval_automation.main:run"
train = "company_description_retrieval_automation.main:train"
replay = "company_description_retrieval_automation.main:replay"
test = "company_description_retrieval_automation.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
